--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Train Car Logger</title>
   </head>
-  <body class="min-h-screen bg-[radial-gradient(circle_at_top,_#1f2937,_#030712_55%)] font-sans antialiased text-slate-50">
+  <body class="min-h-screen bg-slate-100 font-sans antialiased text-slate-900">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
