--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="theme-color" content="#ffffff" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="manifest" href="/train-car-logger/manifest.json" />
+    <link rel="apple-touch-icon" href="./img/icon.svg" />
+    <link rel="manifest" href="./manifest.json" />
     <title>Train Car Logger</title>
   </head>
   <body class="min-h-screen bg-white font-sans antialiased text-slate-900">
