--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="theme-color" content="#ffffff" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="apple-touch-icon" href="./img/icon.svg" />
+    <link rel="apple-touch-icon" href="./img/icon.png" />
+    <link rel="shortcut icon" href="./img/icon.png"/>
+    <link rel="icon" type="image/png" href="./img/icon.png"/>
     <link rel="manifest" href="./manifest.json" />
     <title>Train Car Logger</title>
   </head>
